# rust_book

./: .gitignore  Cargo.toml  README.md
src/01_hello_world/: hello.rs
src/02_guessing_game/: main.rs
src/03_common_programming_concepts/: comment.rs  control_flow.rs  data_type.rs  function.rs  variables.rs
src/04_ownership/: references_and_borrowing.rs  slice.rs  what_is_ownership.rs
src/05_structs/: defining_structs.rs  example_structs.rs  method_syntax.rs
src/06_enums/: defining_enum.rs  if_let.rs  match.rs
src/08_common_collections/: hash_maps.rs
src/09_error_handling/: unrecoverable_errors_with_panic.rs  unrecoverable_errors_with_result  unrecoverable_errors_with_result.rs
src/variables/: main.rs
