[package]
name = "rust_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/01_hello_world/main.rs"

[[bin]]
name = "guessing_game"
path = "src/02_guessing_game/main.rs"

[[bin]]
name = "variables"
path = "src/03_common_programming_concepts/variables.rs"

[[bin]]
name = "data_type"
path = "src/03_common_programming_concepts/data_type.rs"

[[bin]]
name = "function"
path = "src/03_common_programming_concepts/function.rs"

[[bin]]
name = "control_flow"
path = "src/03_common_programming_concepts/control_flow.rs"

[[bin]]
name = "what_is_ownership"
path = "src/04_ownership/what_is_ownership.rs"
[dependencies]
rand = "0.8.4"