[package]
name = "rust_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/01_hello_world/main.rs"

[[bin]]
name = "guessing_game"
path = "src/02_guessing_game/main.rs"

[[bin]]
name = "variables"
path = "src/03_common_programming_concepts/variables.rs"

[[bin]]
name = "data_type"
path = "src/03_common_programming_concepts/data_type.rs"

[[bin]]
name = "function"
path = "src/03_common_programming_concepts/function.rs"

[[bin]]
name = "control_flow"
path = "src/03_common_programming_concepts/control_flow.rs"

[[bin]]
name = "what_is_ownership"
path = "src/04_ownership/what_is_ownership.rs"

[[bin]]
name = "slice"
path = "src/04_ownership/slice.rs"

[[bin]]
name = "defining_structs"
path = "src/05_structs/defining_structs.rs"

[[bin]]
name = "example_structs"
path = "src/05_structs/example_structs.rs"


[[bin]]
name = "method_syntax"
path = "src/05_structs/method_syntax.rs"

[[bin]]
name = "defining_enum"
path = "src/06_enums/defining_enum.rs"

[[bin]]
name = "match"
path = "src/06_enums/match.rs"

[[bin]]
name = "if_let"
path = "src/06_enums/if_let.rs"

[[bin]]
name = "hash_maps"
path = "src/08_common_collections/hash_maps.rs"

[[bin]]
name = "unrecoverable_errors_with_panic"
path = "src/09_error_handling/unrecoverable_errors_with_panic.rs"

[[bin]]
name = "unrecoverable_errors_with_result"
path = "src/09_error_handling/unrecoverable_errors_with_result.rs"

[dependencies]
rand = "0.8.4"